# agora

./: AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  dist-workspace.toml
.github/workflows/: release.yml
deploy/: agora  agora-opencode-plugin.js  agora-scribe.service  agora-stop-hook.sh  agora.service  com.giannisan.agora-scribe.plist
deploy/injectors/: kitty.sh  wezterm.sh
docs/plans/: 2026-07-17-agora-design.md
src/: dashboard.html  main.rs
