[package]
name = "agora"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "2", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
ureq = { version = "3.3.0", features = ["json"] }
